# detector-fake-news-jornal-campus

./: .env.exemple  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  sync-to-hub.yml
docker/: Dockerfile
src/: config_base.py  streamlit_app.py
src/campus_multiplataforma_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/presentation_streamlit/: chat.py
src/service_streamlit/: llm.py  utils.py
