[project]
name = "campus_multiplataforma_llm"
version = "0.1.1"
description = "Campus Multiplataforma LLM"
readme = "README.md"
authors = [{ name = "Lucas Zawacki", email = "lfzawacki@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "pandas>=2.3.3",
    "streamlit>=1.54.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["coverage>=7.13.0", "pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.14.9"]
